# dune-elastodynamics

./: CMakeLists.txt  README.md  config.h.cmake  dune-elastodynamics.pc.in  dune.module
build-cmake/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  config.h  config_collected.h.cmake  dune-elastodynamics-config.cmake  dune-elastodynamics.pc
build-cmake/dune/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-cmake/src/: CTestTestfile.cmake  Example04  Makefile  cmake_install.cmake
build-cmake/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/modules/: CMakeLists.txt
dune/: CMakeLists.txt
dune/elastodynamics/: CMakeLists.txt
dune/elastodynamics/assemblers/: CMakeLists.txt  README.md  consistentmassassembler.hh  hooketensor.hh  hrzlumpedmassassembler.hh  lobattolumpedmassassembler.hh  operatorassembler.hh  operatorassembler_parallel.hh  stiffnessassembler.hh  stiffnessassembler_truss.hh  symmetrictensor.hh
examples/: README.md
examples/Example01/: Example01  result.vtu
examples/Example02/: Example02  cookmembrane.geo  cookmembrane.msh  result.vtu
examples/Example03/: Displacement.mm  Example03  beam.msh
src/: CMakeLists.txt  Example01.cc  Example02.cc  Example03.cc  Example04.cc
src/truss/: CMakeLists.txt  Example01.cc  Example02.cc  Example03.cc  Example04.cc
test/: CMakeLists.txt  beam.msh  consistentmasstest.cc  dynamicbeambendingtest.cc  hrzlumpingtest.cc  maxdisplacementtest.cc  maxdisplacementtest3d.cc  staticbeambendingtest.cc  trussstiffnesstest.cc
(+50 files in other folders)
